fix: ensure Storybook heading style doesn't bleed into component examples

--- a/.storybook/preview.css
+++ b/.storybook/preview.css
@@ -18,24 +18,24 @@
 /* Styling for anchor tags inside headings */
 /* Target Storybook docs container for higher specificity */
 .sbdocs {
-  h2 {
+  > h2 {
     @apply mt-12;
   }
 
-  h3 {
+  > h3 {
     @apply mt-8;
   }
 
-  h1 a,
-  h2 a {
+  > h1 > a,
+  > h2 > a {
     @apply mt-3;
   }
 
-  h3 a {
+  > h3 > a {
     @apply mt-2;
   }
 
-  h3 + p {
+  > h3 + p {
     @apply mt-2;
   }
 }
